# chip8-rs

./: .gitignore  Cargo.toml  README.md  download_games.sh
.cargo/: config
chip8/: Cargo.toml
chip8/src/: lib.rs
pcd8544-hal/: Cargo.toml  README.md  create_logo.sh
pcd8544-hal/platform-examples/stm32f30x-pcd8544/: .gdbinit  Cargo.toml  memory.x
pcd8544-hal/platform-examples/stm32f30x-pcd8544/.cargo/: config
pcd8544-hal/platform-examples/stm32f30x-pcd8544/examples/: gpio.rs  spi.rs
pcd8544-hal/platform-examples/tm4c123x-pcd8544/: .gdbinit  Cargo.toml
pcd8544-hal/platform-examples/tm4c123x-pcd8544/examples/: gpio.rs
pcd8544-hal/src/: demo.rs  font.rs  lib.rs  pcd8544_gpio.rs  pcd8544_spi.rs
sdl/: Cargo.toml
sdl/src/: main.rs
src/: main.rs
stm32/: .gitignore  Cargo.toml  flash.sh  list_games.py  openocd.cfg  openocd.gdb
stm32/src/: main.rs
