[workspace]

members = [
    "chip8",
    "sdl",
    "stm32",
    "pcd8544-hal",
]

[profile.dev]
opt-level = 3
# opt-level = "z" # +
#codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
